--- a/workshop.html
+++ b/workshop.html
@@ -107,7 +107,7 @@
     <!-- Sidebar untuk desktop -->
     <div class="sidebar d-none d-lg-flex">
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="#foto"><img src="logo.png" alt="Logo" width="200px"></a></li>
+            <li class="nav-item"><a class="nav-link" href="#foto-d"><img src="logo.png" alt="Logo" width="200px"></a></li>
             <li class="nav-item"><a class="nav-link" href="#about">Tentang Kelas</a></li>
             <li class="nav-item"><a class="nav-link" href="#syarat">Syarat & Ketentuan</a></li>
             <li class="nav-item"><a class="nav-link" href="#register">Cara Pendaftaran</a></li>
@@ -119,7 +119,7 @@
     </div>
 
     <div class="content-d">
-        <img src="-workshop_WEB.jpg" alt="Deskripsi Gambar" width="100%" id="foto">
+        <img src="-workshop_WEB.jpg" alt="Deskripsi Gambar" width="100%" id="foto-d">
     </div>
 
     <section class="resume-section" id="about">
